apps/karakeep/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: karakeep-ingress-route
  namespace: karakeep
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`karakeep.local.khider.fr`)
      services:
        - name: karakeep
          port: 3000
  tls:
    secretName: karakeep-cert
